Update Recap page to #970

--- a/recap.html
+++ b/recap.html
@@ -8003,6 +8003,86 @@
                         <td align="left" valign="top">Canada's bustling ports and waterfronts are home to many historic and scenic quays. A quay, a platform along the water used for loading and unloading ships, plays a significant role in Canada's maritime history. The Port of Montréal is one of the largest inland ports in the world, with historic quays that have connected Canada to international trade for centuries. In Halifax, the Waterfront Boardwalk features picturesque quays that showcase Nova Scotia's seafaring heritage. Toronto's Queens Quay, located along the harbourfront, is a vibrant area combining waterfront beauty with urban energy.  From Québec City's Old Port to Vancouver's marinas, Canada's quays showcase a rich blend of history, commerce, and natural beauty.</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1873720067688370307" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">961</td>
+                        <td valign="top" align="center">Dec 30, 2024</td>
+                        <td valign="top" align="center"><strong>BRAVO</strong><br>🪖🔤⚓️</td>
+                        <td align="center" valign="top">4.43</td>
+                        <td align="left" valign="top">In the Canadian military, "Bravo" is more than just an exclamation of praise; it's the code word for the letter "B" in the NATO phonetic alphabet, which ensures clear communication across the Canadian Armed Forces and beyond. The phonetic alphabet - from "Alpha" to "Zulu" - is used worldwide, helping Canadian military personnel coordinate and reduce misunderstandings during missions. Bravo is also commonly used to name companies within various units like the Bravo Company, 1st Battalion, The Royal Canadian Regiment (1 RCR)  Battle Group. Additionally, the term Bravo Zulu (BZ) is also a naval signal meaning "well done", and is commonly used across all branches to commend service members for a job well executed.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1874096958022823948" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">962</td>
+                        <td valign="top" align="center">Dec 31, 2024</td>
+                        <td valign="top" align="center"><strong>TOAST</strong><br>🥂🥳🍾</td>
+                        <td align="center" valign="top">3.92</td>
+                        <td align="left" valign="top">The countdown is on to 2025! On New Year's Eve, a toast is often made to health, happiness, and prosperity for the year ahead. Canada's ice wines, primarily from Ontario's Niagara region, are world-renowned and frequently raised in celebratory toasts during special occasions. Cheers to a sparkling New Year!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1874467210346840118" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">963</td>
+                        <td valign="top" align="center">Jan 1, 2025</td>
+                        <td valign="top" align="center"><strong>LEVEE</strong><br>🎉</td>
+                        <td align="center" valign="top">4.79</td>
+                        <td align="left" valign="top">Happy New Year from Canuckle! In Canada, the word "levee" has a unique historical and cultural significance! Originating from the French word "lever," meaning "to rise," a levee is a New Year's Day reception traditionally hosted by the Governor General, Lieutenant Governors, military establishments, and municipalities. This custom dates back to the 17th century, introduced by French colonial governors. Today, it is a cherished Canadian tradition where citizens gather to exchange New Year's greetings, enjoy refreshments, and celebrate community spirit.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1874830141932642346" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">964</td>
+                        <td valign="top" align="center">Jan 2, 2025</td>
+                        <td valign="top" align="center"><strong>KRILL</strong><br>🦐</td>
+                        <td align="center" valign="top">5.20</td>
+                        <td align="left" valign="top">Euphausiids, or krill, as they are commonly called, are tiny crustaceans found throughout the world's oceans. These zooplankton are a very important part of the food chain in the ocean as they serve as prey for countless species of fish and marine mammals. Canada’s coastal waters are home to many species of krill, thriving in both the chilly depths of the Atlantic and Pacific Oceans. These tiny creatures might be small, but they are vital in supporting the rich marine biodiversity found off Canada’s shores.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1875168836430844299" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">965</td>
+                        <td valign="top" align="center">Jan 3, 2025</td>
+                        <td valign="top" align="center"><strong>ARRAY</strong><br>📡</td>
+                        <td align="center" valign="top">4.36</td>
+                        <td align="left" valign="top">The <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/square-kilometre-array-observatory" target="_blank">Square Kilometre Array Observatory</a> (SKAO) is the world's next-generation radio-astronomy observatory. Currently under construction, the SKAO will operate the 2 largest radio-telescope arrays in the world. The observatory is a global collaboration with partners on 5 continents and in both hemispheres, and Canada has been a key partner since the 1990s, contributing to its design, construction, and scientific use. Canada will be home to one of the SKA's regional centres, which will be part of the SKA Regional Centre Network.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1875547812705808542" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">966</td>
+                        <td valign="top" align="center">Jan 4, 2025</td>
+                        <td valign="top" align="center"><strong>CLANS</strong><br>💃🪶</td>
+                        <td align="center" valign="top">4.62</td>
+                        <td align="left" valign="top">Many Indigenous communities across Canada are organized into clans, which play an important role in identity, governance, and kinship. Ribbon skirts often honour these connections, with colours and patterns reflecting clan affiliations, personal stories, or ancestral ties. On January 4th, as we celebrate National Ribbon Skirt Day, we recognize the strength and unity of Indigenous clans, which continue to inspire the designs and meanings behind these beautiful garments.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1875889792707338576" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">967</td>
+                        <td valign="top" align="center">Jan 5, 2025</td>
+                        <td valign="top" align="center"><strong>MAKER</strong><br>🗺️🧭</td>
+                        <td align="center" valign="top">4.94</td>
+                        <td align="left" valign="top">David Thompson was a legendary map maker, earning him the title "the Stargazer" or "Koo-Koo-Sint" among some Indigenous peoples. An Anglo-Canadian fur trader, explorer, and surveyor, Thompson travelled an astonishing 90,000 kilometres across North America during his career, meticulously mapping 4.9 million square kilometres of the continent. His unparalleled work in cartography has led many to call him the "greatest practical land geographer that the world has produced." These maps not only shaped the understanding of North America's vast landscapes but also reflected his collaboration with Indigenous communities, whose knowledge greatly influenced his work.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1876248987323470295" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">968</td>
+                        <td valign="top" align="center">Jan 6, 2025</td>
+                        <td valign="top" align="center"><strong>JUNCO</strong><br>🐦</td>
+                        <td align="center" valign="top">5.18</td>
+                        <td align="left" valign="top">The Dark-eyed Junco, a small sparrow-like bird, is a common sight in Canada’s wooded habitats. Known for its grey plumage and white belly, this bird thrives across much of the country. However, it’s not just their appearance that makes them unique - ornithologists call the species a "systematist's nightmare" because it includes several distinct groups, each with its own subspecies. Dark-eyed Juncos are often referred to as “snowbirds” since they appear in many Canadian backyards during the winter months, foraging on the ground for seeds. Whether in forests or at bird feeders, these cheerful birds add a lively touch to Canada’s colder seasons!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1876612033572991436" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">969</td>
+                        <td valign="top" align="center">Jan 7, 2025</td>
+                        <td valign="top" align="center"><strong>PEASE</strong><br><img src="images/recap/pease.jpg"></td>
+                        <td align="center" valign="top">4.59</td>
+                        <td align="left" valign="top">Pease pudding, also known as pease porridge, is a traditional dish in Newfoundland made from split yellow peas that are boiled and mashed to create a creamy, savoury side dish. In Newfoundland, it's a staple accompaniment to Jiggs' dinner, a traditional boiled dinner that includes salted beef, root vegetables, and cabbage. This hearty meal has its roots in the British Isles but has been embraced and adapted by Newfoundlanders, reflecting the island's rich culinary heritage and its connection to British and Irish settlers. Pease pudding showcases the comfort and warmth of Newfoundland cuisine.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1876964950490468589" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">970</td>
+                        <td valign="top" align="center">Jan 8, 2025</td>
+                        <td valign="top" align="center"><strong>TALUS</strong><br>⚪️🪨</td>
+                        <td align="center" valign="top">5.12</td>
+                        <td align="left" valign="top">In Edmonton, Alberta, art meets geology at the eye-catching Talus Dome. This iconic roadside sculpture, made up of nearly 1,000 stainless steel spheres, resembles a natural talus slope - a collection of rocks and boulders that accumulate at the base of cliffs. Located along the edge of the Quesnell Bridge, the Talus Dome has become a beloved landmark, dazzling visitors as it reflects the sky and surrounding landscape. It’s a modern, artistic twist on nature’s own rocky formations, right in the heart of Edmonton!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1877333819344265574" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -9080,6 +9160,17 @@
                   <tr><td align="center" valign="top">958</td><td align="center" valign="top"><strong>PIGGY</strong></td></tr>
                   <tr><td align="center" valign="top">959</td><td align="center" valign="top"><strong>WHIRL</strong></td></tr>
                   <tr><td align="center" valign="top">960</td><td align="center" valign="top"><strong>QUAYS</strong></td></tr>
+
+                  <tr><td align="center" valign="top">961</td><td align="center" valign="top"><strong>BRAVO</strong></td></tr>
+                  <tr><td align="center" valign="top">962</td><td align="center" valign="top"><strong>TOAST</strong></td></tr>
+                  <tr><td align="center" valign="top">963</td><td align="center" valign="top"><strong>LEVEE</strong></td></tr>
+                  <tr><td align="center" valign="top">964</td><td align="center" valign="top"><strong>KRILL</strong></td></tr>
+                  <tr><td align="center" valign="top">965</td><td align="center" valign="top"><strong>ARRAY</strong></td></tr>
+                  <tr><td align="center" valign="top">966</td><td align="center" valign="top"><strong>CLANS</strong></td></tr>
+                  <tr><td align="center" valign="top">967</td><td align="center" valign="top"><strong>MAKER</strong></td></tr>
+                  <tr><td align="center" valign="top">968</td><td align="center" valign="top"><strong>JUNCO</strong></td></tr>
+                  <tr><td align="center" valign="top">969</td><td align="center" valign="top"><strong>PEASE</strong></td></tr>
+                  <tr><td align="center" valign="top">970</td><td align="center" valign="top"><strong>TALUS</strong></td></tr>
 
                </tbody>
             </table>
