Update Recap page to #980

--- a/recap.html
+++ b/recap.html
@@ -8083,6 +8083,86 @@
                         <td align="left" valign="top">In Edmonton, Alberta, art meets geology at the eye-catching Talus Dome. This iconic roadside sculpture, made up of nearly 1,000 stainless steel spheres, resembles a natural talus slope - a collection of rocks and boulders that accumulate at the base of cliffs. Located along the edge of the Quesnell Bridge, the Talus Dome has become a beloved landmark, dazzling visitors as it reflects the sky and surrounding landscape. It’s a modern, artistic twist on nature’s own rocky formations, right in the heart of Edmonton!</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1877333819344265574" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">971</td>
+                        <td valign="top" align="center">Jan 9, 2025</td>
+                        <td valign="top" align="center"><strong>SPINY</strong><br>🐢</td>
+                        <td align="center" valign="top">4.40</td>
+                        <td align="left" valign="top">Canada's most unique terrestrial animal is probably not what you might think. A recent study published in the journal The <a href="https://www.canadianfieldnaturalist.ca/index.php/cfn/article/view/2673" target="_blank">Canadian Field-Naturalist</a> has found the country's most evolutionarily distinct Canadian animal is the spiny softshell turtle! These turtles can be found in Ontario and Quebec, and are one of the largest freshwater turtle species in North America. But unfortunately, they have been listed as one of Canada's rarest species for over 20 years. If we let them disappear from Canada, we would lose almost 180 million years of unique evolutionary history. This shows how important it is to prioritize the conservation of this species and its unique legacy amongst Canadian wildlife.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1877701124779888729" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">972</td>
+                        <td valign="top" align="center">Jan 10, 2025</td>
+                        <td valign="top" align="center"><strong>CHAOS</strong><br>🥏</td>
+                        <td align="center" valign="top">4.53</td>
+                        <td align="left" valign="top">The <a href="https://canadianultimate.com/en_ca/chaos" target="_blank">Winnipeg Chaos</a> ultimate frisbee team made history in 1999 by winning the Canadian Ultimate Championships and the Spirit of the Game award - an incredible feat for their very first season! Known for their dominance in Canadian mixed Ultimate during the early 2000s, Chaos also left a lasting impact by mentoring young players and growing the sport. Their legacy was cemented with their induction into the Ultimate Canada Hall of Fame in 2014. Ultimate Frisbee thrives in Canada, where sportsmanship and skill go hand in hand - making Chaos's achievements all the more fitting!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1878082828543349145" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">973</td>
+                        <td valign="top" align="center">Jan 11, 2025</td>
+                        <td valign="top" align="center"><strong>VANES</strong><br>🌬️🎏🚜</td>
+                        <td align="center" valign="top">5.73</td>
+                        <td align="left" valign="top">In Westlock, Alberta, you can find a truly unique roadside attraction: the world's largest working weather vane. This 15-metre-tall structure features a massive tractor perched on top, paying homage to the region's agricultural roots. Weather vanes, which are used to indicate wind direction, are common across Canada, often found on barns and buildings, but the one in Westlock stands out for its size and creativity. It's a symbol of both the farming heritage and the playful spirit of the Canadian countryside. Fittingly, the weather vane sits just outside of the <a href="https://canadiantractormuseum.ca/" target="_blank">Canadian Tractor Museum</a>.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1878435458776015204" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">974</td>
+                        <td valign="top" align="center">Jan 12, 2025</td>
+                        <td valign="top" align="center"><strong>WHELK</strong><br>🐌</td>
+                        <td align="center" valign="top">5.00</td>
+                        <td align="left" valign="top">Whelks are spiral-shelled sea snails commonly found in the cold waters off Canada's Atlantic coast. These hardy creatures are not only a key part of marine ecosystems but also an important catch in the fishing industry, where they are harvested for their delicate meat and exported worldwide. Indigenous peoples have long valued whelks, using their shells to create tools, jewellery, and even decorative wampum beads. These small but mighty molluscs are a fascinating part of Canada's coastal heritage!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1878783275511988582" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">975</td>
+                        <td valign="top" align="center">Jan 13, 2025</td>
+                        <td valign="top" align="center"><strong>LOOSE</strong><br><img src="images/recap/loose.jpg"></td>
+                        <td align="center" valign="top">4.28</td>
+                        <td align="left" valign="top">In Calgary, Alberta, you’ll find a legendary spot for improv comedy called the <a href="https://www.loosemoose.com/" target="_blank">Loose Moose Theatre</a>, a Canadian institution since 1977! Famous for its hilarious, off-the-cuff performances, Loose Moose has launched the careers of many comedians and actors, and it remains a beloved venue for improv lovers. If you ever feel like laughing 'til you’re loose from your seat, this is the place to be. Plus, it’s all proudly Canadian - combining creativity, humour, and a bit of wild fun, just like the theatre’s name suggests!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1879149026827776251" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">976</td>
+                        <td valign="top" align="center">Jan 14, 2025</td>
+                        <td valign="top" align="center"><strong>EARLY</strong><br><img src="images/recap/early.jpg"></td>
+                        <td align="center" valign="top">4.02</td>
+                        <td align="left" valign="top">Natural Resources Canada has developed a national <a href="https://www.earthquakescanada.nrcan.gc.ca/eew-asp/system-en.php" target="_blank">Earthquake Early Warning</a> (EEW) system designed to provide early detection and warning in areas of moderate to high earthquake hazard and with concentrations of population and infrastructure. In Canada, this earthquake risk is concentrated in western British Columbia, eastern Ontario, and southern Quebec. The EEW system began operation in BC in the spring of 2024 and will begin in Quebec and Ontario in early 2025.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1879548096134136162" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">977</td>
+                        <td valign="top" align="center">Jan 15, 2025</td>
+                        <td valign="top" align="center"><strong>PAIRS</strong><br>⛸️</td>
+                        <td align="center" valign="top">3.83</td>
+                        <td align="left" valign="top">Canadian pair skaters Deanna Stellato-Dudek and Maxime Deschamps made history at the 2024 World Figure Skating Championships in Montreal by clinching the gold medal in the pairs event. Their exceptional performance captivated audiences and judges alike, earning them top marks and solidifying their status as world champions. Notably, Stellato-Dudek, at 40, became the oldest woman to win a figure skating world title in any discipline, breaking a record set over a century ago. Their victory marked the first world title for a Canadian pair since 2016, highlighting their remarkable skill, grace, and athleticism on the ice.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1879875590796263613" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">978</td>
+                        <td valign="top" align="center">Jan 16, 2025</td>
+                        <td valign="top" align="center"><strong>SANDY</strong><br>🏖️</td>
+                        <td align="center" valign="top">3.90</td>
+                        <td align="left" valign="top">While Canada is famous for its mountains and forests, it also has some of the world's most beautiful sandy beaches. One of the gems is <a href="https://www.ontarioparks.ca/park/sandbanks" target="_blank">Sandbanks Provincial Park</a> in Ontario, which features the largest freshwater sandbar and dune system in the world! Another beach lover's paradise is Cavendish Beach in Prince Edward Island, with its red sand and rolling dunes. Alongside Wasaga Beach in Ontario, the longest freshwater beach in the world, these natural beauties offer picturesque sandy getaways for visitors and Canadians alike.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1880235318361690557" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">979</td>
+                        <td valign="top" align="center">Jan 17, 2025</td>
+                        <td valign="top" align="center"><strong>COACH</strong><br>🚃</td>
+                        <td align="center" valign="top">4.00</td>
+                        <td align="left" valign="top">Henry Ruttan was a prominent businessman, inventor, and politician in Upper Canada who revolutionized railway travel. In 1858, he patented an innovative system for heating and cooling railway coaches, which was adopted by several railway companies across North America. His system used the motion of the train to force outside air through ducts and a wash tank, where the air was cleaned, humidified, and cooled. During winter, the system was adapted to heat the air entering the cars, making train travel more comfortable year-round. Ruttan’s invention was a game-changer for passenger comfort and a brilliant example of Canadian ingenuity!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1880606078984946092" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">980</td>
+                        <td valign="top" align="center">Jan 18, 2025</td>
+                        <td valign="top" align="center"><strong>MANIA</strong><br>🏛️🤩📈</td>
+                        <td align="center" valign="top">4.65</td>
+                        <td align="left" valign="top">Canada experienced "Trudeaumania" in the late 1960s and early 1970s, a wave of excitement sparked by Pierre Trudeau, the charismatic leader of the Liberal Party. With his progressive policies, youthful energy, and charm, Trudeau became a symbol of change and modernity during a transformative period in Canadian history. His rise to power as Prime Minister in 1968 captivated Canadians from coast to coast. "Trudeaumania" saw fans attending packed rallies, sporting Trudeau-inspired fashion, and collecting buttons and memorabilia. This phenomenon left a lasting impact on Canadian politics and culture, marking a unique and spirited chapter in the nation's political history.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1880996348251513080" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -9171,6 +9251,17 @@
                   <tr><td align="center" valign="top">968</td><td align="center" valign="top"><strong>JUNCO</strong></td></tr>
                   <tr><td align="center" valign="top">969</td><td align="center" valign="top"><strong>PEASE</strong></td></tr>
                   <tr><td align="center" valign="top">970</td><td align="center" valign="top"><strong>TALUS</strong></td></tr>
+
+                  <tr><td align="center" valign="top">971</td><td align="center" valign="top"><strong>SPINY</strong></td></tr>
+                  <tr><td align="center" valign="top">972</td><td align="center" valign="top"><strong>CHAOS</strong></td></tr>
+                  <tr><td align="center" valign="top">973</td><td align="center" valign="top"><strong>VANES</strong></td></tr>
+                  <tr><td align="center" valign="top">974</td><td align="center" valign="top"><strong>WHELK</strong></td></tr>
+                  <tr><td align="center" valign="top">975</td><td align="center" valign="top"><strong>LOOSE</strong></td></tr>
+                  <tr><td align="center" valign="top">976</td><td align="center" valign="top"><strong>EARLY</strong></td></tr>
+                  <tr><td align="center" valign="top">977</td><td align="center" valign="top"><strong>PAIRS</strong></td></tr>
+                  <tr><td align="center" valign="top">978</td><td align="center" valign="top"><strong>SANDY</strong></td></tr>
+                  <tr><td align="center" valign="top">979</td><td align="center" valign="top"><strong>COACH</strong></td></tr>
+                  <tr><td align="center" valign="top">980</td><td align="center" valign="top"><strong>MANIA</strong></td></tr>
 
                </tbody>
             </table>
